# ketqat-sdk

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_PLAN.md  README.md  RELEASING.md  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  npm-package.yml  publish.yml  python-package.yml
app/: layout.tsx  page.tsx
app/cloud/: page.tsx
components/cloud/: provider-card.tsx
components/nav/: header.tsx
docs/: first-release-checklist.md  quickstart.md  release-recovery.md
lib/: cloud-providers.ts
python/: LICENSE  README.md  pyproject.toml
python/src/ketqat_runner/: cli.py  environment.py  examples.py  hashing.py  runner.py  validation.py
python/src/ketqat_runner/schemas/: algorithm-benchmark-result.schema.json  algorithm-experiment-manifest.schema.json  qec-benchmark-result.schema.json
python/tests/: test_hashing.py  test_runner.py
schemas/: algorithm-benchmark-result.schema.json  artifact.schema.json  benchmark-suite.schema.json  qec-benchmark-result.schema.json  qec-experiment-manifest.schema.json  reproducibility-bundle.schema.json  verification-evidence.schema.json
scripts/: check-registry-readback.mjs  check-release-version.mjs  generate-schemas.mjs  release-preflight.sh  verify-npm-clean-install.mjs  verify-package-contents.mjs  verify-python-distributions.py  verify-quickstart.sh  verify-registry-installs.sh
src/: cloud-providers.ts  index.ts  mock-data.ts  types.ts  version.ts
src/client/: index.ts
tests/: sdk.test.mjs
(+25 files in other folders)
